--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <title>Open CliEng</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="{% static 'boostrap/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'estilo/custom.min.css' %}">
-    <link rel="stylesheet" href="{% static 'estilo/general.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'custom.min.css' %}">
+    <link rel="stylesheet" href="{% static 'general.css' %}">
     {% block styles %}
     {% endblock %}
   </head>
@@ -75,7 +75,7 @@
         </div>
     </footer>
 
-    <script src="{% static 'boostrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap.min.js' %}"></script>
     {% block scripts %}
     {% endblock %}
   </body>
