--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <title>Open CliEng</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/spacelab/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'custom.min.css' %}">
         <link rel="stylesheet" href="{% static 'general.css' %}">
         {% block styles %}
@@ -74,8 +74,8 @@
             </div>
         </footer>
       
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="{% static 'jquery.min.js' %}"></script>
+        <script src="{% static 'bootstrap.min.js' %}"></script>
 
         {% block scripts %}
         {% endblock %}
