--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <div class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="#" class="navbar-brand">Open CliEng</a>
+                    <a href="/" class="navbar-brand">Home Open CliEng</a>
                     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -26,16 +26,13 @@
                 <div class="navbar-collapse collapse" id="navbar-main">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">Início</a>
+                            <a href="/equipamento/">Equipamentos</a>
                         </li>
                         <li>
-                            <a href="#">Equipamentos</a>
+                            <a href="/manutencao/">Manutenções</a>
                         </li>
                         <li>
-                            <a href="#">Manutenções</a>
-                        </li>
-                        <li>
-                            <a href="#">Locais</a>
+                            <a href="/local/">Locais</a>
                         </li>
                     </ul>
 
