--- a/equipamento/templates/equipamento/detalhar_equipamento.html
+++ b/equipamento/templates/equipamento/detalhar_equipamento.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-3">
                 <label>Contrato: </label>
-                <a href="detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a>
+                <a href="/equipamento/detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a>
             </div>
         </div>
         <div class="row">
