--- a/equipamento/templates/equipamento/index.html
+++ b/equipamento/templates/equipamento/index.html
@@ -25,10 +25,10 @@
                             </tr>
                             <tr>
                                 <td>Contrato</td>
-                                <td><a href="detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a></td>
+                                <td><a href="/equipamento/detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a></td>
                             </tr>
                         </table>
-                        <div class="panel-footer"><a href="detalhar/{{ equipamento.id }}">Detalhar</a></div>
+                        <div class="panel-footer"><a href="/equipamento/detalhar/{{ equipamento.id }}">Detalhar</a></div>
                     </div>
                 </div>
             {% endfor %}
