--- a/equipamento/templates/equipamento/detalhar_contrato.html
+++ b/equipamento/templates/equipamento/detalhar_contrato.html
@@ -1,39 +1,48 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <h1>{{ contrato }}</h1>
+<div class="row">
+    <h1 class="text-center">{{ contrato }}</h1>
     <hr>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 col-md-offset-3">
-                <label>Arquivo: </label>
-                <a href="{{ contrato.arquivo.url }}" target="_blank">Ver</a>
+
+    <div class="col-md-6 col-md-offset-3 panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Arquivo: </label>
+                    <a href="{{ contrato.arquivo.url }}" target="_blank">Ver</a>
+                </div>
+                <div class="col-md-6">
+                    <label>Valor: </label>
+                    {{ contrato.valor }}
+                </div>
             </div>
-            <div class="col-md-3">
-                <label>Valor: </label>
-                {{ contrato.valor }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <label>Descrição: </label>
-                {{ contrato.descricao }}
+            <div class="row">
+                <div class="col-md-12">
+                    <label>Descrição: </label>
+                    {{ contrato.descricao }}
+                </div>
             </div>
         </div>
     </div>
-
-    <h1>Equipamentos Relacionados</h1>
+</div>
+<div class="row">
+    <h1 class="text-center">Equipamentos Relacionados</h1>
     <hr>
-    <table>
-        <tr>
-            <th>Nome</th>
-            <th>Num Serie</th>
-        </tr>
-        {% for equipamento in contrato.equipamentos.all %}
-        <tr>
-            <td>{{ equipamento }}</td>
-            <td>{{ equipamento.num_serie }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+
+    <div class="col-md-6 col-md-offset-3">
+        <table class="table table-striped table-hover">
+            <tr>
+                <th>Nome</th>
+                <th>Num Serie</th>
+            </tr>
+            {% for equipamento in contrato.equipamentos.all %}
+            <tr>
+                <td>{{ equipamento }}</td>
+                <td>{{ equipamento.num_serie }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
