--- a/equipamento/templates/equipamento/index.html
+++ b/equipamento/templates/equipamento/index.html
@@ -1,39 +1,40 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <h1>Equipamentos</h1>
+<div class="row">
+    <h1 class="text-center">Equipamentos</h1>
     <hr>
     {% if equipamentos %}
-        <div class="row">
-            {% for equipamento in equipamentos %}
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-
-                        <div class="panel-heading">{{ equipamento.nome }}</div>
-                        <table class="table">
-                            <tr>
-                                <td>Num Serie</td>
-                                <td>{{ equipamento.num_serie }}</td>
-                            </tr>
-                            <tr>
-                                <td>Setor</td>
-                                <td>{{ equipamento.setor }}</td>
-                            </tr>
-                            <tr>
-                                <td>Manual</td>
-                                <td><a href="{{ equipamento.manual.url }}" target="_blank">Ver</a></td>
-                            </tr>
-                            <tr>
-                                <td>Contrato</td>
-                                <td><a href="/equipamento/detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a></td>
-                            </tr>
-                        </table>
-                        <div class="panel-footer"><a href="/equipamento/detalhar/{{ equipamento.id }}">Detalhar</a></div>
-                    </div>
-                </div>
-            {% endfor %}
+    <div class="row">
+        {% for equipamento in equipamentos %}
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">{{ equipamento.nome }}</div>
+                <table class="table table-striped table-hover">
+                    <tr>
+                        <td><label>Num Serie</label></td>
+                        <td>{{ equipamento.num_serie }}</td>
+                    </tr>
+                    <tr>
+                        <td><label>Setor</label></td>
+                        <td>{{ equipamento.setor }}</td>
+                    </tr>
+                    <tr>
+                        <td><label>Manual</label></td>
+                        <td><a href="{{ equipamento.manual.url }}" target="_blank">Ver</a></td>
+                    </tr>
+                    <tr>
+                        <td><label>Contrato</label></td>
+                        <td><a href="/equipamento/detalhar_contrato/{{ equipamento.contrato.id }}">Ver</a></td>
+                    </tr>
+                </table>
+                <div class="panel-footer"><a href="/equipamento/detalhar/{{ equipamento.id }}">Detalhar</a></div>
+            </div>
         </div>
+        {% endfor %}
+    </div>
     {% else %}
-        <p>Sem equipamentos cadastrados</p>
+    <p>Sem equipamentos cadastrados</p>
     {% endif %}
+</div>
 {% endblock %}
