--- a/static/css/general.css
+++ b/static/css/general.css
@@ -1,5 +1,3 @@
-footer{
-    padding-top: 70px;
-    padding-bottom: 30px;
-    background-color: #ecf0f1;
+body > .container {
+  padding: 60px 15px 0;
 }
