--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'custom.min.css' %}">
+        <!--<link rel="stylesheet" href="{% static 'custom.min.css' %}">-->
         <link rel="stylesheet" href="{% static 'general.css' %}">
+        <link rel="stylesheet" href="{% static 'sticky_footer.css' %}">
         {% block styles %}
         {% endblock %}
     </head>
@@ -43,13 +44,12 @@
             </div>
         </div>
 
-
         <div class="container">
             {% block body %}
             {% endblock %}
         </div>
 
-        <footer>
+        <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -62,15 +62,11 @@
                         <p>
                             Código livre (MIT License): <a href="https://github.com/rodrigondec/Open_Clineng/" target="_blank">https://github.com/rodrigondec/Open_Clineng/</a>
                         </p>
-                        <p>
-                            Tema por: <a href="http://thomaspark.co" rel="nofollow" target="_blank">Thomas Park</a>
-                            usando <a href="https://getbootstrap.com/" rel="nofollow" target="_blank">Bootstrap</a>.
-                        </p>
                     </div>
                 </div>
             </div>
         </footer>
-      
+
         <script src="{% static 'jquery.min.js' %}"></script>
         <script src="{% static 'bootstrap.min.js' %}"></script>
 
