--- a/equipamento/templates/equipamento/index.html
+++ b/equipamento/templates/equipamento/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 <div class="row">
     <h1 class="text-center">Equipamentos</h1>
     <hr>
