--- a/local/templates/local/index.html
+++ b/local/templates/local/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
     {% if locais %}
         <ul>
         {% for local in locais %}
