--- a/manutencao/templates/manutencao/detalhes.html
+++ b/manutencao/templates/manutencao/detalhes.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 
     <h1>Detalhes da manutenção</h1>
     <h2>{{ manutencao.id }}</h2>
