--- a/manutencao/templates/manutencao/index.html
+++ b/manutencao/templates/manutencao/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
     {% if manutencoes %}
         <ul>
         {% for manutencao in manutencoes %}
