--- a/equipamento/templates/equipamento/detalhar_equipamento.html
+++ b/equipamento/templates/equipamento/detalhar_equipamento.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
     <div class="row">
         <h1 class="text-center">{{ equipamento.nome }}</h1>
         <hr>
