--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container-fluid">
-            {% block body %}
+            {% block content %}
             {% endblock %}
         </div>
 
