--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
                         <li>
                             <a href="/local/">Locais</a>
                         </li>
+                        <li>
+                            <a href="#">Ordem de Serviço</a>
+                        </li>
                     </ul>
 
                     {% if usuario_autenticado %}
