--- a/core/templates/core/tecnico_detalhes.html
+++ b/core/templates/core/tecnico_detalhes.html
@@ -5,7 +5,7 @@
     <h1 class="text-center">{{ tecnico }}</h1>
     <hr>
 
-    <div class="col-md-6 col-md-offset-3 panel panel-default">
+    <div class="col-md-6 col-md-offset-3 panel panel-primary">
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-6">
