--- a/manutencao/templates/manutencao/index.html
+++ b/manutencao/templates/manutencao/index.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% if manutencoes %}
-        <ul>
-        {% for manutencao in manutencoes %}
-            <li>Nome:</li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>Sem manutenções cadastrados</p>
-    {% endif %}
+<div class="row">
+    <h1 class="text-center">Manutenções</h1>
+    <hr>
+
+    <div class="col-md-6 col-md-offset-3">
+        <table class="table table-striped table-hover">
+            <tr>
+                <th>Equipamento</th>
+                <th>Responsável</th>
+                <th>Data Realizada</th>
+                <th class="col-md-1">Detalhar</th>
+            </tr>
+            {% for manutencao in manutencoes %}
+            <tr>
+                <td>{{ manutencao.equipamento }}</td>
+                <td>{{ manutencao.responsavel }}</td>
+                <td>{{ manutencao.data_realizada }}</td>
+                <td><a href="/manutencao/detalhar/{{ manutencao.id }}">Ver</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
