--- a/equipamento/templates/equipamento/equipamento_detalhes.html
+++ b/equipamento/templates/equipamento/equipamento_detalhes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row">
-        <h1 class="text-center">{{ equipamento.nome }}</h1>
+        <h1 class="text-center">Detalhes do Equipamento {{ equipamento.nome }}</h1>
         <hr>
 
         <div class="col-md-6 col-md-offset-3 panel panel-primary">
