--- a/manutencao/templates/manutencao/index.html
+++ b/manutencao/templates/manutencao/index.html
@@ -8,6 +8,7 @@
     <div class="col-md-6 col-md-offset-3">
         <table class="table table-striped table-hover">
             <tr>
+                <th>Tipo</th>
                 <th>Equipamento</th>
                 <th>Responsável</th>
                 <th>Data Realizada</th>
@@ -15,6 +16,7 @@
             </tr>
             {% for manutencao in manutencoes %}
             <tr>
+                <td>{{ manutencao.tipo }}</td>
                 <td>{{ manutencao.equipamento }}</td>
                 <td>{{ manutencao.responsavel }}</td>
                 <td>{{ manutencao.data_realizada }}</td>
