--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -20,7 +20,7 @@
         </table>
     </div>
     <div class="col-md-6">
-        <h1 class="text-center">Técnicos</h1>
+        <h1 class="text-center">Técnicos Responsáveis</h1>
         <hr>
 
         <table class="table table-striped table-hover">
