--- a/core/templates/core/tecnico_detalhes.html
+++ b/core/templates/core/tecnico_detalhes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <h1 class="text-center">Detalhes do Tecnico {{ tecnico }}</h1>
+    <h1 class="text-center">Detalhes do Tecnico Responsável {{ tecnico }}</h1>
     <hr>
 
     <div class="col-md-6 col-md-offset-3 panel panel-primary">
